<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/settings_title" />

    <TextView
        android:id="@+id/button_night_mode"
        style="@style/ColoredTextStyle.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_button_night_mode" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/button_language"
        style="@style/ColoredTextStyle.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_button_language" />
</LinearLayout>